[package]
name = "auction_program"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
borsh = "0.9.3"
borsh-derive = "0.9.1"
home = "0.5.3"
serde_yaml = "0.8"
solana-cli-config = "1.9.9"
solana-program = "1.9.9"

[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"

[lib]
crate-type = ["cdylib", "lib"]