[package]
name = "auction_program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
solana-program = "1.10.12"
solana-sdk = "1.9.9"

[dev-dependencies]
solana-program-test = "1.10.12"
solana-sdk = "1.9.9"

[lib]
crate-type = ["cdylib", "lib"]